styles: fixed the text color of editLink to follow --text color for better contrast

--- a/src/pages/educator/extra-video-quizzes/[year]/ExtraLessonsListPage.module.css
+++ b/src/pages/educator/extra-video-quizzes/[year]/ExtraLessonsListPage.module.css
@@ -41,7 +41,7 @@
 }
 
 .editLink {
-  color: var(--accent-color);
+  color: (--text-color);
   text-decoration: none;
   font-weight: bold;
   transition: color 0.3s ease;
